docs/pages/versions/v54.0.0/sdk/filesystem.mdx
---
title: 文件系统
description: 一个提供访问设备本地文件系统的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-54/packages/expo-file-system'
packageName: 'expo-file-system'
iconUrl: '/static/images/packages/expo-file-system.png'
platforms: ['android', 'ios', 'tvos', 'expo-go']
isNew: true
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { Collapsible } from '~/ui/components/Collapsible';
import { CODE } from '~/ui/components/Text';

`expo-file-system` 提供对存储在设备上或作为资源打包进原生项目中的文件和目录的访问。它还允许从网络下载文件。

## 安装

<APIInstallSection />

## 用法

```js
import { File, Directory, Paths } from 'expo-file-system';
```

`File` 和 `Directory` 实例持有对文件、内容或资源 URI 的引用。

文件或目录不需要存在——只有在使用错误的类来表示一个已存在的路径时，才会从构造函数中抛出错误（因此，如果你尝试创建一个 `File` 实例，并传入一个已经存在的目录路径，就会出错）。

## 功能

- 同时支持同步和异步的文件内容读写访问
- 创建、修改和删除
- 提供 `type`、`size`、`creationDate` 等属性，以及更多属性
- 能够使用流或 `FileHandle` 类来读写文件
- 通过 `downloadFileAsync` 或 `expo/fetch` 轻松下载/上传文件

## 示例

<Collapsible summary="写入和读取文本文件">

```ts example.ts
import { File, Paths } from 'expo-file-system';

try {
  const file = new File(Paths.cache, 'example.txt');
  file.create(); // 如果文件已存在或没有创建权限，这里可能会抛出错误
  file.write('Hello, world!');
  console.log(file.textSync()); // 你好，世界！
} catch (error) {
  console.error(error);
}
```

</Collapsible>

<Collapsible summary="使用系统选择器选择文件">

与 `expo-document-picker` 一起使用：

```ts example.ts
import { File } from 'expo-file-system';
import * as DocumentPicker from 'expo-document-picker';

try {
  const result = await DocumentPicker.getDocumentAsync({ copyToCacheDirectory: true });
  const file = new File(result.assets[0]);
  console.log(file.textSync());
} catch (error) {
  console.error(error);
}
```

在 Android 上使用内置的 `pickFileAsync` 或 `pickDirectoryAsync` 方法：

```ts example.ts
import { File } from 'expo-file-system';

try {
  const file = new File.pickFileAsync();
  console.log(file.textSync());
} catch (error) {
  console.error(error);
}
```

</Collapsible>

<Collapsible summary="下载文件">

使用 `downloadFileAsync`：

```ts example.ts
import { Directory, File, Paths } from 'expo-file-system';

const url = 'https://pdfobject.com/pdf/sample.pdf';
const destination = new Directory(Paths.cache, 'pdfs');
try {
  destination.create();
  const output = await File.downloadFileAsync(url, destination);
  console.log(output.exists); // true
  console.log(output.uri); // 下载文件的路径，例如：'${cacheDirectory}/pdfs/sample.pdf'
} catch (error) {
  console.error(error);
}
```

或者使用 `expo/fetch`：

```ts example.ts
import { fetch } from 'expo/fetch';
import { File, Paths } from 'expo-file-system';

const url = 'https://pdfobject.com/pdf/sample.pdf';
const response = await fetch(url);
const src = new File(Paths.cache, 'file.pdf');
src.write(await response.bytes());
```

</Collapsible>

<Collapsible summary={<>使用 <CODE>expo/fetch</CODE> 上传文件</>}>

你可以直接使用 Expo 包内置的 `fetch` 将文件作为 blob 上传：

```ts example.ts
import { fetch } from 'expo/fetch';
import { File, Paths } from 'expo-file-system';

const file = new File(Paths.cache, 'file.txt');
file.write('Hello, world!');

const response = await fetch('https://example.com', {
  method: 'POST',
  body: file,
});
```

或者使用 `FormData` 构造函数：

```ts example.ts
import { fetch } from 'expo/fetch';
import { File, Paths } from 'expo-file-system';

const file = new File(Paths.cache, 'file.txt');
file.write('Hello, world!');
const formData = new FormData();
formData.append('data', file);
const response = await fetch('https://example.com', {
  method: 'POST',
  body: formData,
});
```

</Collapsible>

<Collapsible summary="移动和复制文件">

```ts example.ts
import { Directory, File, Paths } from 'expo-file-system';
try {
  const file = new File(Paths.document, 'example.txt');
  file.create();
  console.log(file.uri); // '${documentDirectory}/example.txt'
  const copiedFile = new File(Paths.cache, 'example-copy.txt');
  file.copy(copiedFile);
  console.log(copiedFile.uri); // '${cacheDirectory}/example-copy.txt'
  file.move(Paths.cache);
  console.log(file.uri); // '${cacheDirectory}/example.txt'
  file.move(new Directory(Paths.cache, 'newFolder'));
  console.log(file.uri); // '${cacheDirectory}/newFolder/example.txt'
} catch (error) {
  console.error(error);
}
```

</Collapsible>

<Collapsible summary="使用旧版 FileSystem API">

```ts example.ts
import * as FileSystem from 'expo-file-system/legacy';
import { File, Paths } from 'expo-file-system';

try {
  const file = new File(Paths.cache, 'example.txt');
  const content = await FileSystem.readAsStringAsync(file.uri);
  console.log(content);
} catch (error) {
  console.error(error);
}
```

</Collapsible>

<Collapsible summary="递归列出目录内容">

```ts example.ts
import { Directory, Paths } from 'expo-file-system';

function printDirectory(directory: Directory, indent: number = 0) {
  console.log(`${' '.repeat(indent)} + ${directory.name}`);
  const contents = directory.list();
  for (const item of contents) {
    if (item instanceof Directory) {
      printDirectory(item, indent + 2);
    } else {
      console.log(`${' '.repeat(indent + 2)} - ${item.name} (${item.size} 字节)`);
    }
  }
}

try {
  printDirectory(new Directory(Paths.cache));
} catch (error) {
  console.error(error);
}
```

</Collapsible>

## API

<APISection packageName="expo-file-system" apiName="FileSystem" />
